--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,11 @@
 			<artifactId>jackson-databind</artifactId>
 			<version>2.13.2.1</version>
 		</dependency>
+		<dependency>
+			<groupId>commons-codec</groupId>
+			<artifactId>commons-codec</artifactId>
+			<version>1.15</version>
+		</dependency>
 
 
 	</dependencies>
